@@ -1,3 +1,9 @@
+2005-10-16  Bill Wohler  <wohler@newt.com>
+
+	* mh-init.el (mh-image-load-path): Use locate-library to find
+	MH-E. This simplified the code a lot. Flattened out nested
+	statements even more.
+
 2005-10-16  Satyaki Das  <satyaki@theforce.stanford.edu>
 
 	* mh-init.el (mh-image-load-path): Remove use of pushnew since it
